@@ -1,6 +1,6 @@
 package net.bnb1.kradle.features.jvm
 
-import net.bnb1.kradle.create
+import net.bnb1.kradle.createTask
 import net.bnb1.kradle.featureRegistry
 import net.bnb1.kradle.features.Blueprint
 import net.bnb1.kradle.propertiesRegistry
@@ -20,9 +20,10 @@ class DevelopmentModeBlueprint(project: Project) : Blueprint(project) {
     }
 
     override fun createTasks() {
+        val javaProperties = project.propertiesRegistry.get<JavaProperties>()
         val mainSourceSet = project.sourceSets.getByName(SourceSet.MAIN_SOURCE_SET_NAME)
         val agentResource = javaClass.getResource("/agent.jar")
-        project.create<JavaExec>(
+        project.createTask<JavaExec>(
             "dev",
             "Runs the application and stops it when sources change (use with -t)"
         ) {
@@ -37,6 +38,9 @@ class DevelopmentModeBlueprint(project: Project) : Blueprint(project) {
             environment("PROJECT_ROOT", project.rootDir)
             // Speed up start when developing
             jvmArgs = listOf("-XX:TieredStopAtLevel=1")
+            if (javaProperties.withPreviewFeatures.get()) {
+                jvmArgs = jvmArgs + "--enable-preview"
+            }
             classpath = mainSourceSet.runtimeClasspath
             jvmArgs = jvmArgs + listOf("-javaagent:${agentFile.absolutePath}")
         }
