@@ -1,13 +1,16 @@
 package net.bnb1.kradle.features.jvm
 
 import net.bnb1.kradle.apply
+import net.bnb1.kradle.featureRegistry
 import net.bnb1.kradle.features.Blueprint
+import net.bnb1.kradle.features.general.BootstrapFeature
 import net.bnb1.kradle.propertiesRegistry
 import org.gradle.api.GradleException
-import org.gradle.api.JavaVersion
 import org.gradle.api.Project
 import org.gradle.api.plugins.JavaPlugin
 import org.gradle.api.plugins.JavaPluginExtension
+import org.gradle.api.tasks.compile.JavaCompile
+import org.gradle.kotlin.dsl.withType
 
 class JavaBlueprint(project: Project) : Blueprint(project) {
 
@@ -28,14 +31,28 @@ class JavaBlueprint(project: Project) : Blueprint(project) {
         project.apply(JavaPlugin::class.java)
     }
 
-    override fun configure() {
-        val properties = project.propertiesRegistry.get<JvmProperties>()
-        val javaExtension = project.extensions.getByType(JavaPluginExtension::class.java)
+    override fun registerBlueprints() {
+        with(project.featureRegistry) {
+            if (get<JavaFeature>().isEnabled) {
+                get<BootstrapFeature>().addBlueprint(JavaBootstrapBlueprint(project))
+                get<CodeAnalysisFeature>().addBlueprint(PmdBlueprint(project))
+                get<CodeAnalysisFeature>().addBlueprint(SpotBugsBlueprint(project))
+                get<LintFeature>().addBlueprint(CheckstyleBlueprint(project))
+            }
+        }
+    }
 
-        if (!javaExtension.toolchain.languageVersion.isPresent) {
-            val javaVersion = JavaVersion.toVersion(properties.targetJvm.get())
-            javaExtension.sourceCompatibility = javaVersion
-            javaExtension.targetCompatibility = javaVersion
+    override fun configure() {
+        val jvmProperties = project.propertiesRegistry.get<JvmProperties>()
+        project.tasks.withType<JavaCompile> {
+            options.release.set(Integer.parseInt(jvmProperties.targetJvm.get()))
+        }
+
+        val javaProperties = project.propertiesRegistry.get<JavaProperties>()
+        if (javaProperties.withPreviewFeatures.get()) {
+            project.tasks.withType<JavaCompile> {
+                options.compilerArgs.add("--enable-preview")
+            }
         }
     }
 }
