@@ -1,8 +1,13 @@
 package net.bnb1.kradle.features.jvm
 
 import com.adarshr.gradle.testlogger.TestLoggerPlugin
-import net.bnb1.kradle.*
+import net.bnb1.kradle.apply
+import net.bnb1.kradle.createTask
 import net.bnb1.kradle.features.Blueprint
+import net.bnb1.kradle.propertiesRegistry
+import net.bnb1.kradle.sourceSets
+import net.bnb1.kradle.testImplementation
+import net.bnb1.kradle.testRuntimeOnly
 import org.gradle.api.Project
 import org.gradle.api.tasks.SourceSet
 import org.gradle.api.tasks.testing.Test
@@ -54,7 +59,7 @@ class TestBlueprint(project: Project) : Blueprint(project) {
                 }
             }
 
-        project.create<Test>(name, description) {
+        project.createTask<Test>(name, description) {
             testClassesDirs = sourceSet.output.classesDirs
             classpath = sourceSet.runtimeClasspath
             mustRunAfter("test")
@@ -74,10 +79,15 @@ class TestBlueprint(project: Project) : Blueprint(project) {
     }
 
     override fun configure() {
-        val properties = project.propertiesRegistry.get<TestProperties>()
+        val testProperties = project.propertiesRegistry.get<TestProperties>()
+        val javaProperties = project.propertiesRegistry.get<JavaProperties>()
+
         project.tasks.withType<Test> {
-            if (properties.junitJupiterVersion.hasValue) {
+            if (testProperties.junitJupiterVersion.hasValue) {
                 useJUnitPlatform()
+            }
+            if (javaProperties.withPreviewFeatures.get()) {
+                jvmArgs = jvmArgs + "--enable-preview"
             }
             testLogging {
                 showStandardStreams = true
